--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -2353,7 +2353,8 @@ transition-duration: 500ms;
 .header{
     min-height: 110px;
     z-index: 99;
-	padding:0;
+	padding: 0 0 5 0;
+
 }
 .header .header-left {float:left;}
 
@@ -4301,6 +4302,11 @@ border-radius: 0 ;
 	#accordion .input-group-btn{display: table;}
 	.product-info .image, .product-info .additional-carousel{width:100%;}
 }
+
+.header-box {
+    background: #d6f3d0;
+}
+
 @media only screen and (max-width: 319px){
 
 
