--- a/catalog/view/theme/OPCADD012/stylesheet/megnor/custom.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/megnor/custom.css
@@ -499,6 +499,10 @@ span.customSelect.changed {
 		font-size:11px;
 		height:20px;
 		width:20px;
-	} 
+	}
 
+
+.header-box {
+	background: #d6f3d0;
+}
 /* Responsive menu Css End */
