--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -2353,14 +2353,8 @@ transition-duration: 500ms;
 .header{
     min-height: 110px;
     z-index: 99;
-	padding: 0px 0px 5px 0px;
-
+	padding:0;
 }
-
-.header-box {
-    background: #d6f3d0;
-}
-
 .header .header-left {float:left;}
 
 #logo img{display:inline-block;}
@@ -3780,8 +3774,10 @@ section#social_block > ul{padding:0 0 0 30px;}
     margin-left: 5px;
 }
 header{
+
+
 	height: 163px;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 	
 }
 
@@ -4305,7 +4301,6 @@ border-radius: 0 ;
 	#accordion .input-group-btn{display: table;}
 	.product-info .image, .product-info .additional-carousel{width:100%;}
 }
-
 @media only screen and (max-width: 319px){
 
 
