--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -1,6 +1,6 @@
 body {
-	 background: #fafafa none repeat scroll 0 0;
-    color: #919191;
+	background: #fafafa none repeat scroll 0 0;
+    color: #2a2a2a;
     font-family: "Open Sans",verdana,Helvetica,sans-serif;
     font-size: 14px;
     height: 100%;
