--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -1,10 +1,10 @@
 body {
 	background: #fafafa none repeat scroll 0 0;
-    color: #2a2a2a;
+    color: #2a2a2a !important;
     font-family: "Open Sans",verdana,Helvetica,sans-serif;
     font-size: 14px;
     height: 100%;
-    line-height: 24px;border-radius
+    line-height: 24px;border-radius;
     min-width: 240px;
 }
 
