--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -1865,7 +1865,7 @@ background:#fff;
     background-image: none;
 }
 .box.box-left-side {
-    background-color: #a5dd5c !important;
+    background-color: #ffcebb !important;
 }
 
 
