--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -1870,6 +1870,9 @@ background:#fff;
 .box.box-left-side ul li a {
     color: #47525c !important;
 }
+.box.box-left-side ul li a:hover {
+    text-decoration: underline;
+}
 
 .box .box-content ul ul{
 	margin-left:15px;
