--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -1867,7 +1867,7 @@ background:#fff;
 .box.box-left-side {
     background-color: #ffcebb !important;
 }
-.box.box-left-side ul li a, .box.box-left-side box-content {
+.box.box-left-side ul li a {
     color: #47525c !important;
 }
 .box.box-left-side ul li a:hover {
@@ -1877,6 +1877,11 @@ background:#fff;
 .box .box-content ul ul{
 	margin-left:15px;
 	z-index:99;
+}
+
+.box.box-left-side .box-content-text {
+    color: #47525c !important;
+    padding: 0px 0px 0px 10px;
 }
 
 
