--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -1882,6 +1882,7 @@ background:#fff;
 .box.box-left-side .box-content-text {
     color: #47525c !important;
     padding: 0px 0px 0px 10px;
+    font-size: 10pt;
 }
 
 
