--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -1886,8 +1886,8 @@ background:#fff;
 }
 
 .bottom-copyright {
-    padding: 0px 0px 0px 0px;
-    color: #fff;
+    padding: 10px 10px 0px 0px;
+    color: #a2a2a2;
 }
 
 
