--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -1900,7 +1900,7 @@ background:#fff;
 
 .box.box-contact-form {
     padding: 10px 10px 10px 10px !important;
-    background-color: #fff;
+    background-color: #e1e1e1;
 
 }
 
