--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -1892,6 +1892,12 @@ background:#fff;
 .header-phones {
     font-size: 16pt;
     color: #2b7720;
+    float: left;
+    padding: 30px 0 0;
+}
+.header-center {
+    overflow: hidden;
+    padding: 0px 0 0 40px;
 }
 
 .container {
