--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -2398,7 +2398,7 @@ transition-duration: 500ms;
 	padding:0;
     background: #fff !important;
     border-radius: 0 !important;
-    border-top: 3px solid #336e2e !important;
+    border-top: 3px solid #7fb934 !important;
 }
 .header .header-left {float:left;}
 
