--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -358,7 +358,7 @@ opacity:0;
 /* logo */
 .header .header-left {
     float: left;
-    margin: 60px 0 21px 0px;
+    margin: 30px 150px 21px 0px;
     padding: 0;
     width: auto;
 }
