--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -559,6 +559,10 @@ bottom:6px;}
 #cart .dropdown-menu a {
     color: #322A2A;
 }
+#cart .dropdown-menu a:hover {
+    text-decoration: underline;
+    color: #FE8802;
+}
 
 .header-cart{float:right;}
 .header-cart button{
