--- a/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPCADD012/stylesheet/stylesheet.css
@@ -537,7 +537,7 @@ bottom:6px;}
 	z-index: 1001;
 }
 #cart .dropdown-menu {
-	 background: none repeat scroll 0 0 #C8DAB1;
+	 background: none repeat scroll 0 0 #f2ffe2;
     border: 1px solid #EEEADE;
     border-radius:  5px;
 	-webkit-border-radius: 5px;
